--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 .ipynb_checkpoints/Day 1 and Day 2-checkpoint.ipynb
 .ipynb_checkpoints/Day 6-7-checkpoint.ipynb
 .ipynb_checkpoints/Phase 2 Solutions-checkpoint.ipynb
+.ipynb_checkpoints/Day - 3 and Day 4-checkpoint.ipynb
+.ipynb_checkpoints/Day - 5-checkpoint.ipynb
