--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 .ipynb_checkpoints/Phase 2 Solutions-checkpoint.ipynb
 .ipynb_checkpoints/Day - 3 and Day 4-checkpoint.ipynb
 .ipynb_checkpoints/Day - 5-checkpoint.ipynb
+.ipynb_checkpoints/Day 6-checkpoint.ipynb
