--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 .ipynb_checkpoints/Day - 3 and Day 4-checkpoint.ipynb
 .ipynb_checkpoints/Day - 5-checkpoint.ipynb
 .ipynb_checkpoints/Day 6-checkpoint.ipynb
+.ipynb_checkpoints/Day - 7-checkpoint.ipynb
+Datasets/.ipynb_checkpoints/data_pdf_1-checkpoint.pdf
